--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title> Floriane Hugget - CV </title>
 </head>
 <body>
-    
+    <h1> Floriane Hugget - Etudiante en communication</h1>  
+        <h2> Bienvenue sur mon CV en ligne ! </h2>   
+            <p> hello everybody ! </p>
 </body>
 </html> 
