--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <title> Floriane Hugget - CV </title>
 </head>
 <body>
-    <h1> Floriane Hugget - Etudiante en communication</h1>  
-        <h2> Bienvenue sur mon CV en ligne ! </h2>   
-            <p> hello everybody ! </p>
+    <h1> Floriane Hugget - Etudiante en communication au CESACOM </h1>  
+        <h2> CV en ligne </h2> 
+          <p> Bienvenue sur mon CV en ligne, vous y trouverez mon parcours et mes coordonnées pour me contacter !</p>
 </body>
 </html> 
+
+<!-- pour mettre commentaire 
+
+3 fichier indexhtml a créer (parcours et contact)
+pour lien <a href="http://">Ma page Facebook</a>
+
+<a href="contact.html">Contact</a> 
+<header> </header> bendeau en haut
+<footer> </footer> bandeau en bas 
+<main> </main> partie centrale du texte
+<nav> </nav> menu 
+<img src="images/monimage.jpg" alt="description de l'image pour les moteurs de recherche"> -->
