--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title> Floriane Hugget - CV </title>
+        <title> Floriane Hugget - CV </title>
+            <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Floriane Hugget - Etudiante en communication au CESACOM </h1>  
-        <h2> CV en ligne </h2> 
-          <p> Bienvenue sur mon CV en ligne, vous y trouverez mon parcours et mes coordonnées pour me contacter !</p>
+   <header> </header>
+     <div> 
+        <h1> Floriane Hugget - Etudiante en communication au CESACOM </h1>  
+            <h2> CV en ligne </h2> 
+                  <p> Bienvenue sur mon CV en ligne, vous y trouverez mon parcours et mes coordonnées pour me contacter !</p>
+    </div>
+         
+        <footter> </footter>
 </body>
 </html> 
 
