--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title> Contact </title>
+         <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <div> 
     <h1> CONTACT </h1>
         <p> Floriane Hugget <br>
         19 ans (05/04/95) <br>
             floriane.hugget@gmail.com <br>
                 06 80 96 82 66 <br></p>
+    </div>
+                <footter> </footter>
    
 </body>
 </html>
