bandeau + mise en page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
             <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header> </header>
+   <header>
+       <nav>
+           <ul>
+               <li><a href="index.html">Accueil</a></li>
+               <li><a href="parcours.html">Parcours</a></li>
+               <li><a href="contact.html">Contact</a></li>
+           </ul>
+       </nav>
+   </header>
      <div> 
         <h1> Floriane Hugget - Etudiante en communication au CESACOM </h1>  
             <h2> CV en ligne </h2> 
@@ -27,4 +35,5 @@ pour lien <a href="http://">Ma page Facebook</a>
 <footer> </footer> bandeau en bas 
 <main> </main> partie centrale du texte
 <nav> </nav> menu 
-<img src="images/monimage.jpg" alt="description de l'image pour les moteurs de recherche"> -->
+<img src="images/monimage.jpg" alt="description de l'image pour les moteurs de recherche">
+Google fonts pour utiliser des typos -->
