--- a/parcours.html
+++ b/parcours.html
@@ -6,6 +6,15 @@
             <link rel="stylesheet" href="style.css">
 </head>
     <body>
+        <header>
+       <nav>
+           <ul>
+               <li><a href="index.html">Accueil</a></li>
+               <li><a href="parcours.html">Parcours</a></li>
+               <li><a href="contact.html">Contact</a></li>
+           </ul>
+       </nav>
+   </header>
        <div>
             <h1> Mon parcours </h1>
                  <h2> formation </h2>
@@ -15,11 +24,11 @@
                 <h2> expériences profesionnelles </h2>
                       <h4> Septembre/Octobre 2014 <br>
                   Conseillère Marketing - WEB LEADER - Paris </h4>
-                  <li> ... </li>
-                  <li> ... </li>
-                  <li> ... </li>
-                  <li> ... </li>
-                  <li> ... </li>
+                  <li> Mise en place d'un fichier commercial </li>
+                  <li> Commercialisation de produits de communication </li>
+                  <li> RDV terrain </li>
+                  <li> Rédaction de contenu pour des sites internet </li>
+                 
                   
                        <h4> Mai/Juin 2014 <br> 
                  Assistante Attachée de Presse - CABINET VERLEY - Colombes </h4>
