--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,15 @@
          <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+       <nav>
+           <ul>
+               <li><a href="index.html">Accueil</a></li>
+               <li><a href="parcours.html">Parcours</a></li>
+               <li><a href="contact.html">Contact</a></li>
+           </ul>
+       </nav>
+   </header>
    <div> 
     <h1> CONTACT </h1>
         <p> Floriane Hugget <br>
