--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,15 @@
    </header>
    <div> 
     <h1> CONTACT </h1>
-        <p> Floriane Hugget <br>
-        19 ans (05/04/95) <br>
-            floriane.hugget@gmail.com <br>
+       
+       <h6> Floriane Hugget </h6> 
+       <p> 19 ans (05/04/95) </p><br>
+           <img class="icone" src="gateau.png">
+           <img class="icone" src="mail.png">
+           <img class="icone" src="tel.png">
+           <p> floriane.hugget@gmail.com <br>
                 06 80 96 82 66 <br></p>
-    </div>
+    
                 <footter> </footter>
    
 </body>
