--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
         <title> Floriane Hugget - CV </title>
             <link rel="stylesheet" href="style.css">
+            
 </head>
 <body>
    <header>
@@ -16,10 +17,10 @@
        </nav>
    </header>
      <div> 
-        <h1> Floriane Hugget - Etudiante en communication au CESACOM </h1>  
-            <h2> CV en ligne </h2> 
-                  <p> Bienvenue sur mon CV en ligne, vous y trouverez mon parcours et mes coordonnées pour me contacter !</p>
-    </div>
+        <h6> Floriane Hugget </h6> 
+        <img src="photo.jpg">
+        <h5> Etudiante en communication - CESACOM</h5>
+            <h3> Bienvenue sur mon CV en ligne ! </h3> 
          
         <footter> </footter>
 </body>
