--- a/parcours.html
+++ b/parcours.html
@@ -41,7 +41,7 @@
                 <h2> compétences </h2>
                         <h4> Informatique: </h4>
                     <li> Word, Excel et PowerPoint </li>
-                    <li> Initiation aux logiciels de PAO (Photoshop, Illustrator, Indesign, Adobe Première</li>
+                    <li> Initiation aux logiciels de PAO (Photoshop, Illustrator, Indesign, Adobe Première)</li>
                         <h4> Communication:</h4>
                     <li> Conception réalisation </li>
                     <li> Réalisation d'une identité visuelle </li>
