--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,14 @@
                     <td> <img class="tel" src="tel.png"> </td>
                    <td > <div class="texte3"> 06 80 96 82 66 </div> </td>
                </tr>
+               <tr>
+                   <td> <img class="facebook" src="facebook.jpg"> </td>
+                   <td> <div class="texte4"> <a href="https://fr-fr.facebook.com/"> ma page facebook </div></td>
+               </tr>
+               <tr>
+                   <td> <img class="instagram" src="instagram.jpg"> </td>
+                   <td> <div class="texte5"> <a href="http://instagram.com/"> ma page instagram </a></div></td>
+               </tr>
        </table>
         
     
